carousel and same links

--- a/index.html
+++ b/index.html
@@ -31,25 +31,25 @@
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Templates</a>
                     <div class="dropdown-menu">
-                        <div class = "dropdown-divider">Homepage</div>
-                          <a class="dropdown-item" href="#">Restaurants</a>
-                          <a class="dropdown-item" href="#">Rooms</a>
-                        <div class = "dropdown-divider">Category</div>
+                        <div class = "dropdown-header">Homepage</div>
+                        <a class="dropdown-item" href="#">Restaurants</a>
+                        <a class="dropdown-item" href="#">Rooms</a>
+                        <div class = "dropdown-header">Category</div>
                           <a class="dropdown-item" href="#">Category on maps</a>
                           <a class="dropdown-item" href="#">Room details</a>
-                        <div class = "dropdown-divider">Pages</div>
+                        <div class = "dropdown-header">Pages</div>
                           <a class="dropdown-item" href="#">Contact</a>
                           <a class="dropdown-item" href="#">Pricing</a>
                            <a class="dropdown-item" href="#">Comming soon</a>
-                         <div class = "dropdown-divider">Users</div>
+                         <div class = "dropdown-header">Users</div>
                           <a class="dropdown-item" href="#">Sign in</a>
                           <a class="dropdown-item" href="#">Sing up</a>
                            <a class="dropdown-item" href="#">Booking process</a>
                            <a class="dropdown-item" href="#">Booking details</a>
-                        <div class = "dropdown-divider">Restaurants</div>
+                        <div class = "dropdown-header">Restaurants</div>
                           <a class="dropdown-item" href="#">Category on maps</a>
                           <a class="dropdown-item" href="#">Restaurants details</a>
-                        <div class = "dropdown-divider">Blog</div>
+                        <div class = "dropdown-header">Blog</div>
                           <a class="dropdown-item" href="#">Blog</a>
                           <a class="dropdown-item" href="#">Post</a>
                     </div>
@@ -60,8 +60,14 @@
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Docs</a>
                     <div class="dropdown-menu">
-                      <a class="dropdown-item" href="#">Restaurants</a>
-                      <a class="dropdown-item" href="#">Rooms</a>
+                        <div class = "dropdown-header">Documentations</div>
+                        <a class="dropdown-item" href="#">Introduction</a>
+                        <a class="dropdown-item" href="#">Directory structure</a>
+                         <a class="dropdown-item" href="#">Gulp</a>
+                        <a class="dropdown-item" href="#">Credits</a>
+                        <div class = "dropdown-header">Components</div>
+                          <a class="dropdown-item" href="#">Bootstrap</a>
+                          <a class="dropdown-item" href="#">Theme</a>
                     </div>
                 </li>
                 <li class = "navbar-item">
@@ -106,28 +112,40 @@
             <div class="col-lg-4 mb-3 lg-mb-0 text-center img-center">
                 <div class= "float-center">
                     <div class = "icon-rounded bg-primary-light mb-3">
+                        <a href="#">
                         <img class = "img rounded float-center"src="css/mapa.png">
+                        </a>
                     </div>
                     <h5><strong> Find the perfect rental</strong></h5>
+                     <a href="#">
                     <p class="tree-info">One morning, when Gregor Samsa woke from troubled dreams, he found himself transformed in his bed in</p>
+                    </a>
                 </div>
             </div>
             <div class="col-lg-4 mb-3 lg-mb-0 text-center">
                 <div class = "float-center">
                     <div class = "icon-rounded bg-primary-light mb-3">
+                        <a href="#">
                         <img class = "img rounded float-center" src="css/credit-card.png">
+                        </a>
                     </div>
                     <h5><strong> Book with confidence</strong></h5>
+                    <a href="#">
                     <p class="tree-info">The bedding was hardly able to cover it and seemed ready to slide off any moment. His many legs, pit</p>
+                    </a>
                 </div>
             </div>
             <div class="col-lg-4 mb-3 lg-mb-0 text-center">
                 <div class = "float-center">
                     <div class = "icon-rounded bg-primary-light mb-3">
+                        <a href="#">
                         <img class = "img rounded float-center" src="css/heart.png">
+                        </a>
                     </div>
                     <h5><strong> Enjoy your vacation</strong></h5>
+                    <a href="#">
                     <p class="tree-info">His room, a proper human room although a little too small, lay peacefully between its four familiar</p>
+                    </a>
                 </div>
             </div>
     </div>
@@ -169,8 +187,8 @@
                 </a>
             </div>
         </div>
-            </div>
-            </div>
+        </div>
+        </div>
 
    <div class="container-second border border-light">
         <div class="row">
@@ -183,8 +201,9 @@
                 <p class = "guides"> see all deals>></p>
                 </a>
             </div>
+        </div>
 
-       <div class="container-second border border-light">
+        <div class="container-second border border-light">
         <div class="card-deck">
             <div class="card">
                 <img src="css/dom.jpg" class="card-img-top" alt="Holiday">
@@ -233,8 +252,35 @@
             </div>
         </div>
         </div>
-   </div>
-   </div>
+
+       <div class="container-third border border-light">
+        <div class="row">
+            <div class = "col">
+                <p class = "subtitle_third letter-spacing-4 mb-8"><strong> Story of our customers :</strong> </p>
+            </div>
+        </div>
+       <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
+           <div class="carousel-inner">
+                <div class="carousel-item active story pic1">
+                     <a href="#">
+                        <h3 class = "history"> Marta's story >> </h3>
+                     </a>
+                </div>
+                <div class="carousel-item story pic1">
+                    <a href="#">
+                    <h3 class = "history"> Veronica's story >>  </h3>
+                    </a>
+                </div>
+                <div class="carousel-item story pic1">
+                    <a href="#">
+                    <h3 class = "history"> Michal's story >> </h3>
+                    </a>
+                </div>
+            </div>
+        </div>
+        </div>
+
+
 
 </body>
      <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
